feat(debug): add var check `github.repository`
#3 https://github.com/nofusscomputing/ansible_collection_centurion/pull/17

--- a/.github/workflows/project.yaml
+++ b/.github/workflows/project.yaml
@@ -24,11 +24,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Add To Project
+      - name: Variables
         run: |
           echo "[Debug] github.event_name=${{ github.event_name }}";
           echo "[Debug] github.event.action=${{ github.event.action }}";
           echo "[Debug] github.repository=${{ github.repository }}";
+          echo "[Debug] github.event.pull_request.author_association=${{ github.event.pull_request.author_association }}";
+          echo "[Debug] github.triggering_actor=${{ github.triggering_actor }}";
 
 
   project-add:
