feat(inputs): change TRIAGE_ITEM_NUMBER to type=string
workflow is erroring. test to see if set as string fixes the issue.

. #3 #4 https://github.com/nofusscomputing/ansible_collection_centurion/pull/24 https://github.com/nofusscomputing/ansible_collection_centurion/pull/25

--- a/.github/workflows/project.yaml
+++ b/.github/workflows/project.yaml
@@ -22,9 +22,9 @@ on:
         type: string
       TRIAGE_ITEM_NUMBER:
         required: false
-        default: 0
+        default: '0'
         description: Number of the item that triggered the workflow (issue/PR)
-        type: number
+        type: string
       TRIAGE_ITEM_URL:
         required: false
         default: "none"
