feat(step): Add debug of vaars step
. #3 #4 https://github.com/nofusscomputing/ansible_collection_centurion/pull/24 https://github.com/nofusscomputing/ansible_collection_centurion/pull/25

--- a/.github/workflows/project.yaml
+++ b/.github/workflows/project.yaml
@@ -46,10 +46,11 @@ jobs:
 
       - name: Variables
         run: |
-          echo "[Debug] github.event_name=${{ github.event_name }}";
+          echo "[Debug] github.actor=${{ github.actor }}";
           echo "[Debug] github.event.action=${{ github.event.action }}";
-          echo "[Debug] github.repository=${{ github.repository }}";
           echo "[Debug] github.event.pull_request.author_association=${{ github.event.pull_request.author_association }}";
+          echo "[Debug] github.event_name=${{ github.event_name }}";
+          echo "[Debug] github.repository=${{ github.repository }}";
           echo "[Debug] github.triggering_actor=${{ github.triggering_actor }}";
 
           echo "[Debug] inputs.TRIAGE_EVENT_ACTION=${{ inputs.TRIAGE_EVENT_ACTION }}";
